--- a/portal/src/main/resources/i18n/messages.properties
+++ b/portal/src/main/resources/i18n/messages.properties
@@ -92,14 +92,14 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Previous
 _action.refine.your.search=Refine your search
 _action.return.to.results=Return to results
 _action.save.this.search=Save this search
 _action.save.to.mine=Save to my personal page
 _action.search=Search
-_action.seeallrelateditems=See all related items
+_action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
 _action.videos=Videos
@@ -120,13 +120,21 @@ _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
 _language_select.italian=Italian (ita)
+_metadata.abm.contentprovider=Provider
+_metadata.abm.county=County
+_metadata.abm.municipality=Municipality
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Coverage
 _metadata.dc.creator=Author
 _metadata.dc.date=Date
 _metadata.dc.description=Description
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identifier
 _metadata.dc.language=Language
+_metadata.dc.publisher=Publisher
+_metadata.dc.relation=Relation
 _metadata.dc.rights=Rights
+_metadata.dc.source=Source
 _metadata.dc.subject=Subject
 _metadata.dc.title=Title
 _metadata.dc.type=Type
@@ -206,21 +214,13 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
+_validation.disclaimer.unchecked=Disclaimer must be accepted
 _validation.password.long=Password is too long
 _validation.password.mismatch=Passwords do not match
 _validation.password.short=Password is too short
 _validation.username.exists=Username already exists
 _validation.username.invalid.chars=Username may only contain letters, digits, spaces and underscores
 _validation.username.long=Username is too long
-abm_contentProvider_t=Provider
-abm_county_t=County
-abm_municipality_t=Municipality
-dc_format_t=Format
-dc_identifier_t=Identifier
-dc_publisher_t=Publisher
-dc_relation_t=Relation
-dc_source_t=Source
-disclaimer.unchecked=Disclaimer must be accepted
 dms.administration.images=Image administration
 dms.administration.pages=Page administration
 dms.administration.title=Administration
