--- a/portal/src/main/resources/i18n/messages_bg.properties
+++ b/portal/src/main/resources/i18n/messages_bg.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Шракни за повече информация
 _action.alt.next.page=щракнете тук за следващата страница резултати
 _action.alt.previous.page=щракнете тук за предишната страница резултати
 _action.alt.table.view=Табличен изглед
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Предишно
 _action.refine.your.search=Уточнете търсенето
 _action.return.to.results=Върни се на резултатите
 _action.save.this.search=Запази това търсене
 _action.save.to.mine=Запази в My Personal Page
 _action.search=Търсене
-_action.seeallrelateditems=Виж всички подобни обекти
+_action.see.all.related.items=Виж всички подобни обекти
 _action.send=Изпрати
 _action.share.with.friend=Сподели с приятел
 _action.videos=Видео
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Обсег
 _metadata.dc.creator=Автор
 _metadata.dc.date=Дата
 _metadata.dc.description=Описание
+_metadata.dc.format=Формат
+_metadata.dc.identifier=Идентификатор
 _metadata.dc.language=Език
+_metadata.dc.publisher=Издател
+_metadata.dc.relation=Връзка
 _metadata.dc.rights=Права
+_metadata.dc.source=Източник
 _metadata.dc.subject=Тема
 _metadata.dc.title=Заглавие
 _metadata.dc.type=Вид
@@ -199,11 +204,6 @@ _unused.view.as.xml=Виж във вид на XML
 _unused.view.with.labels=Виж с етикетите
 _unused.view.without.labels=Виж без етикетите
 _unused.you.have.search.for=Вие търсехте...
-dc_format_t=Формат
-dc_identifier_t=Идентификатор
-dc_publisher_t=Издател
-dc_relation_t=Връзка
-dc_source_t=Източник
 languageDropDownList_t=Език
 locale.albania=Албания
 locale.armenia=Армения
