--- a/portal/src/main/resources/i18n/messages_ca.properties
+++ b/portal/src/main/resources/i18n/messages_ca.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Cliqueu per més informació
 _action.alt.next.page=Cliqueu aquí per anar a la pàgina següent de resultats
 _action.alt.previous.page=cliqueu aquí per anar a la pàgina anterior de resultats
 _action.alt.table.view=Visualització en taula
-_action.personalpage=La Meva Europeana
+_action.personal.page=La Meva Europeana
 _action.previous=Anterior
 _action.refine.your.search=Afineu la vostra cerca
 _action.return.to.results=Tornar als resultats
 _action.save.this.search=Guardar aquesta cerca
 _action.save.to.mine=Guardar a la Meva Europeana
 _action.search=Cerca
-_action.seeallrelateditems=Veure tots els ítems relacionats
+_action.see.all.related.items=Veure tots els ítems relacionats
 _action.send=Enviar
 _action.share.with.friend=Compartir amb un amic
 _action.videos=Videos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Abast
 _metadata.dc.creator=Autor
 _metadata.dc.date=Data
 _metadata.dc.description=Descripció
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identificador
 _metadata.dc.language=Llengua
+_metadata.dc.publisher=Editor
+_metadata.dc.relation=Relació
 _metadata.dc.rights=Drets
+_metadata.dc.source=Font
 _metadata.dc.subject=Matèria
 _metadata.dc.title=Títol
 _metadata.dc.type=Tipus
@@ -199,11 +204,6 @@ _unused.view.as.xml=Visualització en XML
 _unused.view.with.labels=Visualització amb etiquetes
 _unused.view.without.labels=Visualització sense etiquetes
 _unused.you.have.search.for=Heu cercat
-dc_format_t=Format
-dc_identifier_t=Identificador
-dc_publisher_t=Editor
-dc_relation_t=Relació
-dc_source_t=Font
 languageDropDownList_t=Llengua
 locale.albania=Albània
 locale.armenia=Armènia
