--- a/portal/src/main/resources/i18n/messages_cs.properties
+++ b/portal/src/main/resources/i18n/messages_cs.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Další informace
 _action.alt.next.page=Následující stránka výsledků
 _action.alt.previous.page=Předcházejí stránka výsledků
 _action.alt.table.view=Tabulka zobrazených výsledků
-_action.personalpage=Moje Europeana
+_action.personal.page=Moje Europeana
 _action.previous=Předcházející
 _action.refine.your.search=Přeformuluj svůj dotaz
 _action.return.to.results=Návrat k výsledkům vyhledávání
 _action.save.this.search=Ulož výsledky vyhledávání
 _action.save.to.mine=Ulož do Mých European
 _action.search=Hledej
-_action.seeallrelateditems=Veškerý příbuzný obsah
+_action.see.all.related.items=Veškerý příbuzný obsah
 _action.send=Pošli
 _action.share.with.friend=Sdílej s přáteli
 _action.videos=Videa
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Pokrytí
 _metadata.dc.creator=Autor
 _metadata.dc.date=Datum
 _metadata.dc.description=Popis
+_metadata.dc.format=Formát
+_metadata.dc.identifier=Identifikátor
 _metadata.dc.language=Jazyk
+_metadata.dc.publisher=Vydavatel
+_metadata.dc.relation=Vztah
 _metadata.dc.rights=Práva
+_metadata.dc.source=Zdroj
 _metadata.dc.subject=Předmět
 _metadata.dc.title=Název
 _metadata.dc.type=Typ
@@ -199,11 +204,6 @@ _unused.view.as.xml=Zobraz jako XML
 _unused.view.with.labels=Zobraz s popisky
 _unused.view.without.labels=Zobraz bez popisků
 _unused.you.have.search.for=Hledal/a jsi
-dc_format_t=Formát
-dc_identifier_t=Identifikátor
-dc_publisher_t=Vydavatel
-dc_relation_t=Vztah
-dc_source_t=Zdroj
 languageDropDownList_t=Jazyk
 locale.albania=Albánie
 locale.armenia=Arménie
