--- a/portal/src/main/resources/i18n/messages_de.properties
+++ b/portal/src/main/resources/i18n/messages_de.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Für weitere Informationen hier klicken
 _action.alt.next.page=Für die nächste Seite hier klicken
 _action.alt.previous.page=Für die vorige Seite hier klicken
 _action.alt.table.view=Miniaturansicht
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Vorige
 _action.refine.your.search=Suche verfeinern
 _action.return.to.results=Zurück zur Ergebnisliste
 _action.save.this.search=Diese Suche speichern
 _action.save.to.mine=In My Personal Page speichern
 _action.search=Suche
-_action.seeallrelateditems=Alle ähnlichen Objekte anschauen
+_action.see.all.related.items=Alle ähnlichen Objekte anschauen
 _action.send=Senden
 _action.share.with.friend=An einen Freund schicken
 _action.videos=Videos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Umfang
 _metadata.dc.creator=Autor
 _metadata.dc.date=Datum
 _metadata.dc.description=Beschreibung
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identifikation
 _metadata.dc.language=Sprache
+_metadata.dc.publisher=Verlag
+_metadata.dc.relation=Beziehung
 _metadata.dc.rights=Rechte
+_metadata.dc.source=Quelle
 _metadata.dc.subject=Schlagwort
 _metadata.dc.title=Titel
 _metadata.dc.type=Typ
@@ -199,11 +204,6 @@ _unused.view.as.xml=In XML ansehen
 _unused.view.with.labels=Mit Labels ansehen
 _unused.view.without.labels=Ohne Labels ansehen
 _unused.you.have.search.for=Sie haben nach...gesucht
-dc_format_t=Format
-dc_identifier_t=Identifikation
-dc_publisher_t=Verlag
-dc_relation_t=Beziehung
-dc_source_t=Quelle
 languageDropDownList_t=Sprache
 locale.albania=Albanien
 locale.armenia=Armenien
