--- a/portal/src/main/resources/i18n/messages_el.properties
+++ b/portal/src/main/resources/i18n/messages_el.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Πατήστε εδώ για περισσότερες πλ
 _action.alt.next.page=πατήστε εδώ για την επόμενη σελίδα αποτελεσμάτων
 _action.alt.previous.page=πατήστε εδώ για την προηγούμενη σελίδα αποτελεσμάτων
 _action.alt.table.view=Εμφάνιση πίνακα
-_action.personalpage=Η Europeana μου
+_action.personal.page=Η Europeana μου
 _action.previous=Προηγούμενο
 _action.refine.your.search=Επαναπροσδιορίστε την έρευνά σας
 _action.return.to.results=Επιστροφή στα αποτελέσματα
 _action.save.this.search=Αποθήκευση αυτής της έρευνας
 _action.save.to.mine=Αποθήκευση στη Europeana μου
 _action.search=Έρευνα
-_action.seeallrelateditems=Δείτε όλα τα σχετικά τεκμήρια
+_action.see.all.related.items=Δείτε όλα τα σχετικά τεκμήρια
 _action.send=Αποστολή
 _action.share.with.friend=Μοιραστείτε το με ένα φίλο
 _action.videos=Βίντεο
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Κάλυψη
 _metadata.dc.creator=Συγγραφέας
 _metadata.dc.date=Ημερομηνία
 _metadata.dc.description=Περιγραφή
+_metadata.dc.format=Μορφότυπο
+_metadata.dc.identifier=Ταυτοποιητής
 _metadata.dc.language=Γλώσσα
+_metadata.dc.publisher=Εκδότης
+_metadata.dc.relation=Σχέση
 _metadata.dc.rights=Δικαιώματα πνευματικής ιδιοκτησίας
+_metadata.dc.source=Πηγή
 _metadata.dc.subject=Θέμα
 _metadata.dc.title=Τίτλος
 _metadata.dc.type=Τύπος
@@ -199,11 +204,6 @@ _unused.view.as.xml=Εμφάνιση ως XML
 _unused.view.with.labels=Εμφάνιση με τίτλους
 _unused.view.without.labels=Εμφάνιση χωρίς τίτλους
 _unused.you.have.search.for=Έχετε αναζητήσει για
-dc_format_t=Μορφότυπο
-dc_identifier_t=Ταυτοποιητής
-dc_publisher_t=Εκδότης
-dc_relation_t=Σχέση
-dc_source_t=Πηγή
 languageDropDownList_t=Γλώσσα
 locale.albania=Αλβανία
 locale.armenia=Αρμενία
