--- a/portal/src/main/resources/i18n/messages_es.properties
+++ b/portal/src/main/resources/i18n/messages_es.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Pinche aquí para más información
 _action.alt.next.page=pinche aquí para ir a los resultados de la página siguiente
 _action.alt.previous.page=pinche aquí para volver a los resultados de la página anterior
 _action.alt.table.view=Visualización en Tabla
-_action.personalpage=Mi Europeana
+_action.personal.page=Mi Europeana
 _action.previous=Anterior
 _action.refine.your.search=Refine su búsqueda
 _action.return.to.results=Volver a resultados
 _action.save.this.search=Guardar esta búsqueda
 _action.save.to.mine=Guardar en Mi Europeana
 _action.search=Búsqueda
-_action.seeallrelateditems=Ver todos los elementos relacionados
+_action.see.all.related.items=Ver todos los elementos relacionados
 _action.send=Enviado
 _action.share.with.friend=Compartir con un amigo
 _action.videos=Vídeos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Cobertura
 _metadata.dc.creator=Autor
 _metadata.dc.date=Fecha
 _metadata.dc.description=Descripción
+_metadata.dc.format=Formato
+_metadata.dc.identifier=Identificador
 _metadata.dc.language=Lengua
+_metadata.dc.publisher=Editor
+_metadata.dc.relation=Relación
 _metadata.dc.rights=Derechos
+_metadata.dc.source=Fuente
 _metadata.dc.subject=Materia
 _metadata.dc.title=Título
 _metadata.dc.type=Tipo
@@ -199,11 +204,6 @@ _unused.view.as.xml=Vista en XML
 _unused.view.with.labels=Vista con etiqueta
 _unused.view.without.labels=Vista sin etiquetas
 _unused.you.have.search.for=Usted ha buscado por
-dc_format_t=Formato
-dc_identifier_t=Identificador
-dc_publisher_t=Editor
-dc_relation_t=Relación
-dc_source_t=Fuente
 languageDropDownList_t=Lengua
 locale.albania=Albania
 locale.armenia=Armenia
