--- a/portal/src/main/resources/i18n/messages_et.properties
+++ b/portal/src/main/resources/i18n/messages_et.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Rohkem teavet
 _action.alt.next.page=Järgmine tulemuste lehekülg
 _action.alt.previous.page=Eelmine tulemuste lehekülg
 _action.alt.table.view=Vaata tabelina
-_action.personalpage=Minu Europeana
+_action.personal.page=Minu Europeana
 _action.previous=Eelmine
 _action.refine.your.search=Täpsusta päringut
 _action.return.to.results=Tagasi tulemuste juurde
 _action.save.this.search=Salvesta see päring
 _action.save.to.mine=Salvesta Minu Europeanasse
 _action.search=Otsi
-_action.seeallrelateditems=Vaata kõiki sarnaseid objekte
+_action.see.all.related.items=Vaata kõiki sarnaseid objekte
 _action.send=Saada
 _action.share.with.friend=Jagamine sõbraga
 _action.videos=Videod
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Hõlme
 _metadata.dc.creator=Autor
 _metadata.dc.date=Daatum
 _metadata.dc.description=Kirjeldus
+_metadata.dc.format=Vorm
+_metadata.dc.identifier=Identifikaator
 _metadata.dc.language=Keel
+_metadata.dc.publisher=Väljaandja
+_metadata.dc.relation=Seos
 _metadata.dc.rights=Õigused
+_metadata.dc.source=Allikas
 _metadata.dc.subject=Teema
 _metadata.dc.title=Pealkiri
 _metadata.dc.type=Tüüp
@@ -199,11 +204,6 @@ _unused.view.as.xml=Vaata XML-vormingus
 _unused.view.with.labels=Vaata koos siltidega
 _unused.view.without.labels=Vaata ilma siltideta
 _unused.you.have.search.for=Otsiti
-dc_format_t=Vorm
-dc_identifier_t=Identifikaator
-dc_publisher_t=Väljaandja
-dc_relation_t=Seos
-dc_source_t=Allikas
 languageDropDownList_t=Keel
 locale.albania=Albaania
 locale.armenia=Armeenia
