--- a/portal/src/main/resources/i18n/messages_fi.properties
+++ b/portal/src/main/resources/i18n/messages_fi.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Lisätietoja saat klikkaamalla tästä
 _action.alt.next.page=Seuraavan sivun tulokset saat näkyviin klikkaamalla tästä
 _action.alt.previous.page=Edellisen sivun tulokset saat näkyviin klikkaamalla tästä
 _action.alt.table.view=Taulukkonäkymä
-_action.personalpage=Minun Europeanani
+_action.personal.page=Minun Europeanani
 _action.previous=Edellinen
 _action.refine.your.search=Tarkenna hakua
 _action.return.to.results=Palaa tuloksiin
 _action.save.this.search=Tallenna tämä haku
 _action.save.to.mine=Tallenna minun Europeanaani
 _action.search=Haku
-_action.seeallrelateditems=Katso kaikki tähän liittyvät kohteet
+_action.see.all.related.items=Katso kaikki tähän liittyvät kohteet
 _action.send=Lähetä
 _action.share.with.friend=Jaa ystävälle
 _action.videos=Videot
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Kattavuus
 _metadata.dc.creator=Tekijä
 _metadata.dc.date=Päivämäärä
 _metadata.dc.description=Kuvaus
+_metadata.dc.format=Formaatti
+_metadata.dc.identifier=Identifiointitunnus
 _metadata.dc.language=Kieli
+_metadata.dc.publisher=Julkaisija
+_metadata.dc.relation=Suhde
 _metadata.dc.rights=Tekijänoikeudet
+_metadata.dc.source=Lähde
 _metadata.dc.subject=Aihe
 _metadata.dc.title=Nimeke
 _metadata.dc.type=Laji
@@ -199,11 +204,6 @@ _unused.view.as.xml=Tarkastele XML-muodossa
 _unused.view.with.labels=Otsikkonäyttö
 _unused.view.without.labels=Näyttö ilman otsikkoja
 _unused.you.have.search.for=Olet tehnyt haun:
-dc_format_t=Formaatti
-dc_identifier_t=Identifiointitunnus
-dc_publisher_t=Julkaisija
-dc_relation_t=Suhde
-dc_source_t=Lähde
 languageDropDownList_t=Kieli
 locale.albania=Albania
 locale.armenia=Armenia
