--- a/portal/src/main/resources/i18n/messages_fr.properties
+++ b/portal/src/main/resources/i18n/messages_fr.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Cliquer ici pour plus d'information
 _action.alt.next.page=Cliquer ici pour visualiser les résultats de la page suivante
 _action.alt.previous.page=Cliquer ici pour visualiser les résultats de la page précédente
 _action.alt.table.view=Voir le tableau
-_action.personalpage=Mon Europeana
+_action.personal.page=Mon Europeana
 _action.previous=Précédent
 _action.refine.your.search=Affiner votre recherche
 _action.return.to.results=Retourner aux résultats
 _action.save.this.search=Sauvegarder cette recherche
 _action.save.to.mine=Sauver Mon Europeana
 _action.search=Rechercher
-_action.seeallrelateditems=Voir tous les objets en relation
+_action.see.all.related.items=Voir tous les objets en relation
 _action.send=Envoyer
 _action.share.with.friend=Partager avec un ami
 _action.videos=Videos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Couverture
 _metadata.dc.creator=Auteur
 _metadata.dc.date=Date
 _metadata.dc.description=Description
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identifiant
 _metadata.dc.language=Langue
+_metadata.dc.publisher=Éditeur
+_metadata.dc.relation=Relation
 _metadata.dc.rights=Droits
+_metadata.dc.source=Source
 _metadata.dc.subject=Sujet
 _metadata.dc.title=Titre
 _metadata.dc.type=Type
@@ -199,11 +204,6 @@ _unused.view.as.xml=Voir en XML
 _unused.view.with.labels=Voir avec les labels
 _unused.view.without.labels=Voir sans les labels
 _unused.you.have.search.for=Vous avez recherché sur
-dc_format_t=Format
-dc_identifier_t=Identifiant
-dc_publisher_t=Éditeur
-dc_relation_t=Relation
-dc_source_t=Source
 languageDropDownList_t=Langue
 locale.albania=Albanie
 locale.armenia=Arménie
