--- a/portal/src/main/resources/i18n/messages_ga.properties
+++ b/portal/src/main/resources/i18n/messages_ga.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Cliceáil anseo le haghaidh tuilleadh eolais
 _action.alt.next.page=cliceáil anseo le haghaidh an chéad leathanaigh torthaí eile
 _action.alt.previous.page=cliceáil anseo le haghaidh leathanch na dtorthaí roimhe seo
 _action.alt.table.view=Amharc tábla
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Roimhe
 _action.refine.your.search=Beachtaigh do chuardach
 _action.return.to.results=Fill ar na torthaí
 _action.save.this.search=Sábháil an cuardach seo
 _action.save.to.mine=Sábháil chuig My Personal Page
 _action.search=Cuardaigh
-_action.seeallrelateditems=Féach ar na míreanna gaolmhara
+_action.see.all.related.items=Féach ar na míreanna gaolmhara
 _action.send=Seol
 _action.share.with.friend=Roinn le cara
 _action.videos=Físeáin
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Clúdach
 _metadata.dc.creator=Údar
 _metadata.dc.date=Dáta
 _metadata.dc.description=Cur síos
+_metadata.dc.format=Formáid
+_metadata.dc.identifier=Aitheantóir
 _metadata.dc.language=Teanga
+_metadata.dc.publisher=Foilsitheoir
+_metadata.dc.relation=Coibhneas
 _metadata.dc.rights=Cearta
+_metadata.dc.source=Foinse
 _metadata.dc.subject=Ábhar
 _metadata.dc.title=Teideal
 _metadata.dc.type=Sórt
@@ -199,11 +204,6 @@ _unused.view.as.xml=Amharc mar XML
 _unused.view.with.labels=Amharc le lipéid
 _unused.view.without.labels=Amharc gan lipéidd
 _unused.you.have.search.for=Chuardaigh tú
-dc_format_t=Formáid
-dc_identifier_t=Aitheantóir
-dc_publisher_t=Foilsitheoir
-dc_relation_t=Coibhneas
-dc_source_t=Foinse
 languageDropDownList_t=Teanga
 locale.albania=An Albáin
 locale.armenia=An Airméin
