--- a/portal/src/main/resources/i18n/messages_hu.properties
+++ b/portal/src/main/resources/i18n/messages_hu.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=További információk
 _action.alt.next.page=Következő
 _action.alt.previous.page=Előző
 _action.alt.table.view=Táblázatos megjelenítés
-_action.personalpage=Az én Europeanám
+_action.personal.page=Az én Europeanám
 _action.previous=Előző
 _action.refine.your.search=Szűkítse a keresést
 _action.return.to.results=Visszatérés az eredményekhez
 _action.save.this.search=Keresés mentése
 _action.save.to.mine=Mentés Az én Europeanámba
 _action.search=Keresés
-_action.seeallrelateditems=Az összes kapcsolódó elem megtekintése
+_action.see.all.related.items=Az összes kapcsolódó elem megtekintése
 _action.send=Küldés
 _action.share.with.friend=Megosztás egy baráttal
 _action.videos=Videók
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Tartalom
 _metadata.dc.creator=Szerző
 _metadata.dc.date=Kiadási év
 _metadata.dc.description=Leírás
+_metadata.dc.format=Formátum
+_metadata.dc.identifier=Azonosító
 _metadata.dc.language=Language
+_metadata.dc.publisher=Kiadó
+_metadata.dc.relation=Kapcsolat
 _metadata.dc.rights=Jogok
+_metadata.dc.source=Forrás
 _metadata.dc.subject=Tárgyszó
 _metadata.dc.title=Cím
 _metadata.dc.type=Típus
@@ -199,11 +204,6 @@ _unused.view.as.xml=XML nézet
 _unused.view.with.labels=Feliratos nézet
 _unused.view.without.labels=Felirat nélküli nézet
 _unused.you.have.search.for=Keresés
-dc_format_t=Formátum
-dc_identifier_t=Azonosító
-dc_publisher_t=Kiadó
-dc_relation_t=Kapcsolat
-dc_source_t=Forrás
 languageDropDownList_t=Nyelv
 locale.albania=Albánia
 locale.armenia=Örményország
