--- a/portal/src/main/resources/i18n/messages_is.properties
+++ b/portal/src/main/resources/i18n/messages_is.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Smelltu til að fá meiri upplýsingar
 _action.alt.next.page=smelltu hér til að sjá næstu síðu í niðurstöðum
 _action.alt.previous.page=smelltu hér til að sjá fyrri síðu í niðurstöðum
 _action.alt.table.view=Skpða töflu
-_action.personalpage=Mitt Europeana
+_action.personal.page=Mitt Europeana
 _action.previous=Fyrri
 _action.refine.your.search=Þrengri leit
 _action.return.to.results=Til baka í niðurstöður
 _action.save.this.search=Vista þessa leit
 _action.save.to.mine=Vista í Mínu Europeana
 _action.search=Leita
-_action.seeallrelateditems=Sjá allt tengt efni
+_action.see.all.related.items=Sjá allt tengt efni
 _action.send=Senda
 _action.share.with.friend=Deildu með vini
 _action.videos=Myndbönd
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Yfirgrip
 _metadata.dc.creator=Höfundur
 _metadata.dc.date=Ártal
 _metadata.dc.description=Lýsing
+_metadata.dc.format=Form
+_metadata.dc.identifier=Auðkenni
 _metadata.dc.language=Tungumál
+_metadata.dc.publisher=Útgefandi
+_metadata.dc.relation=Tenging
 _metadata.dc.rights=Réttindi
+_metadata.dc.source=Uppruni
 _metadata.dc.subject=Efni
 _metadata.dc.title=Titill
 _metadata.dc.type=Tegund
@@ -199,11 +204,6 @@ _unused.view.as.xml=Skoða XML
 _unused.view.with.labels=Skoða merki
 _unused.view.without.labels=Fela merki
 _unused.you.have.search.for=Þú leitaðir að
-dc_format_t=Form
-dc_identifier_t=Auðkenni
-dc_publisher_t=Útgefandi
-dc_relation_t=Tenging
-dc_source_t=Uppruni
 languageDropDownList_t=Tungumál
 locale.albania=Albaníu
 locale.armenia=Armeníu
