--- a/portal/src/main/resources/i18n/messages_it.properties
+++ b/portal/src/main/resources/i18n/messages_it.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Cliccare qui per ulteriori informazioni
 _action.alt.next.page=Cliccare qui per visualizzare la successiva pagina dei risultati
 _action.alt.previous.page=Cliccare qui per visualizzare la precedente pagina dei risultati
 _action.alt.table.view=Vedi la tabella
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Precedente
 _action.refine.your.search=Raffina la ricerca
 _action.return.to.results=Tornare ai risultati
 _action.save.this.search=Salva questa ricerca
 _action.save.to.mine=Salva in My Personal Page
 _action.search=Cerca
-_action.seeallrelateditems=Vedi tutti gli oggetti correlati
+_action.see.all.related.items=Vedi tutti gli oggetti correlati
 _action.send=Invia
 _action.share.with.friend=Condividi
 _action.videos=Video
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Copertura
 _metadata.dc.creator=Autore
 _metadata.dc.date=Data
 _metadata.dc.description=Descrizione
+_metadata.dc.format=Formato
+_metadata.dc.identifier=Identificatore
 _metadata.dc.language=Lingua
+_metadata.dc.publisher=Editore
+_metadata.dc.relation=Relazione
 _metadata.dc.rights=Diritti
+_metadata.dc.source=Fonte
 _metadata.dc.subject=Soggetto
 _metadata.dc.title=Titolo
 _metadata.dc.type=Tipo
@@ -199,11 +204,6 @@ _unused.view.as.xml=Visualizza come XML
 _unused.view.with.labels=Visualizza con le etichette
 _unused.view.without.labels=Visualizza senza etichette
 _unused.you.have.search.for=Hai cercato
-dc_format_t=Formato
-dc_identifier_t=Identificatore
-dc_publisher_t=Editore
-dc_relation_t=Relazione
-dc_source_t=Fonte
 languageDropDownList_t=Lingua
 locale.albania=Albania
 locale.armenia=Armenia
