--- a/portal/src/main/resources/i18n/messages_lt.properties
+++ b/portal/src/main/resources/i18n/messages_lt.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Spausti čia, norint daugiau informacijos
 _action.alt.next.page=Spausti čia, norint matyti rezultatų kitą puslapį
 _action.alt.previous.page=Spausti čia, norint matyti rezultatų ankstesnį puslapį
 _action.alt.table.view=Lentelės peržiūra
-_action.personalpage=Mano Europeana
+_action.personal.page=Mano Europeana
 _action.previous=Ankstesnis
 _action.refine.your.search=Atnaujinti paiešką
 _action.return.to.results=Grįžti į rezultatus
 _action.save.this.search=Išsaugoti šią paiešką
 _action.save.to.mine=Išsaugoti į ManoEuropeana
 _action.search=Paieška
-_action.seeallrelateditems=Žiūrėti visus susijusius vienetus
+_action.see.all.related.items=Žiūrėti visus susijusius vienetus
 _action.send=Siųsti
 _action.share.with.friend=Dalinkitės su draugu
 _action.videos=Video
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Aprėptis
 _metadata.dc.creator=Autorius
 _metadata.dc.date=Data
 _metadata.dc.description=Aprašymas
+_metadata.dc.format=Formatas
+_metadata.dc.identifier=Identifikatorius
 _metadata.dc.language=Kalba
+_metadata.dc.publisher=Leidėjas
+_metadata.dc.relation=Ryšiai
 _metadata.dc.rights=Teisės
+_metadata.dc.source=Šaltinis
 _metadata.dc.subject=Dalykas
 _metadata.dc.title=Antraštė
 _metadata.dc.type=Tipas
@@ -199,11 +204,6 @@ _unused.view.as.xml=Žiūrėti kaip XML
 _unused.view.with.labels=Žiūrėti etiketes
 _unused.view.without.labels=Žiūrėti be etikečių
 _unused.you.have.search.for=Atlikote paiešką
-dc_format_t=Formatas
-dc_identifier_t=Identifikatorius
-dc_publisher_t=Leidėjas
-dc_relation_t=Ryšiai
-dc_source_t=Šaltinis
 languageDropDownList_t=Kalba
 locale.albania=Albanija
 locale.armenia=Armėnija
