--- a/portal/src/main/resources/i18n/messages_lv.properties
+++ b/portal/src/main/resources/i18n/messages_lv.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Saņemt papildus informāciju
 _action.alt.next.page=uz nākošajiem rezultātiem
 _action.alt.previous.page=uz iepriekšējiem rezultātiem
 _action.alt.table.view=Tabulas skats
-_action.personalpage=Mana Europeana
+_action.personal.page=Mana Europeana
 _action.previous=Iepriekšējais
 _action.refine.your.search=Precizēt meklēšanu
 _action.return.to.results=Atpakaļ uz rezultātiem
 _action.save.this.search=Saglabāt šo meklējumu
 _action.save.to.mine=Saglabāt Mana Europeana
 _action.search=Meklēt
-_action.seeallrelateditems=Aplūkot visus saistītos objektus
+_action.see.all.related.items=Aplūkot visus saistītos objektus
 _action.send=Nosūtīt
 _action.share.with.friend=Dalies ar draugu
 _action.videos=Video
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Aptvērums
 _metadata.dc.creator=Autors
 _metadata.dc.date=Datējums
 _metadata.dc.description=Apraksts
+_metadata.dc.format=Formāts
+_metadata.dc.identifier=Identifikators
 _metadata.dc.language=Valoda
+_metadata.dc.publisher=Izdevējs
+_metadata.dc.relation=Saistība
 _metadata.dc.rights=Tiesības
+_metadata.dc.source=Avots
 _metadata.dc.subject=Priekšmets
 _metadata.dc.title=Nosaukums
 _metadata.dc.type=Tips
@@ -199,11 +204,6 @@ _unused.view.as.xml=Skatīt kā XML
 _unused.view.with.labels=Skatīt ar iezīmēm
 _unused.view.without.labels=Skatīt bez iezīmēm
 _unused.you.have.search.for=Jūs meklējāt pēc
-dc_format_t=Formāts
-dc_identifier_t=Identifikators
-dc_publisher_t=Izdevējs
-dc_relation_t=Saistība
-dc_source_t=Avots
 languageDropDownList_t=Valoda
 locale.albania=Albānija
 locale.armenia=Armēnija
