--- a/portal/src/main/resources/i18n/messages_mk.properties
+++ b/portal/src/main/resources/i18n/messages_mk.properties
@@ -90,14 +90,14 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Previous
 _action.refine.your.search=Refine your search
 _action.return.to.results=Return to results
 _action.save.this.search=Save this search
 _action.save.to.mine=Save to My Personal Page
 _action.search=Search
-_action.seeallrelateditems=See all related items
+_action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
 _action.videos=Videos
@@ -122,8 +122,13 @@ _metadata.dc.coverage=Опсег
 _metadata.dc.creator=Автор
 _metadata.dc.date=Датум
 _metadata.dc.description=Опис
+_metadata.dc.format=Формат
+_metadata.dc.identifier=Идентификатор
 _metadata.dc.language=Јазик
+_metadata.dc.publisher=Издавач
+_metadata.dc.relation=Врска
 _metadata.dc.rights=Права
+_metadata.dc.source=Извор
 _metadata.dc.subject=Предмет
 _metadata.dc.title=Наслов
 _metadata.dc.type=Вид
@@ -198,11 +203,6 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-dc_format_t=Формат
-dc_identifier_t=Идентификатор
-dc_publisher_t=Издавач
-dc_relation_t=Врска
-dc_source_t=Извор
 languageDropDownList_t=Јазик
 locale.albania=Албанија
 locale.armenia=Ерменија
