--- a/portal/src/main/resources/i18n/messages_mt.properties
+++ b/portal/src/main/resources/i18n/messages_mt.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Ikklikkja hawn għal aktar informazzjoni
 _action.alt.next.page=Ikklikkja hawn għall-paġna segwenti tar-riżultati
 _action.alt.previous.page=ikklikkja hawn għall-paġna preċedenti tar-riżultati
 _action.alt.table.view=Dehra għamla ta' tabella
-_action.personalpage=L-Europeana Tiegħi
+_action.personal.page=L-Europeana Tiegħi
 _action.previous=Ta' qabel
 _action.refine.your.search=Irfina t-tiftixa tiegħek
 _action.return.to.results=Erġa' lura għar-riżultati
 _action.save.this.search=Issejvja din it-tiftixa
 _action.save.to.mine=Issejvja f'L-Europeana Tiegħi
 _action.search=Fittex
-_action.seeallrelateditems=Ara l-oġġetti kollha relatati
+_action.see.all.related.items=Ara l-oġġetti kollha relatati
 _action.send=Ibgħat
 _action.share.with.friend=Aqsam ma' ħabib
 _action.videos=Vidjows
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Kopertura
 _metadata.dc.creator=Awtur
 _metadata.dc.date=Data
 _metadata.dc.description=Deskrizzjoni
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identifikatur
 _metadata.dc.language=Lingwa
+_metadata.dc.publisher=Pubblikatur
+_metadata.dc.relation=Relazzjoni
 _metadata.dc.rights=Drittijiet
+_metadata.dc.source=Sors
 _metadata.dc.subject=Suġġett
 _metadata.dc.title=Titlu
 _metadata.dc.type=Tip
@@ -199,11 +204,6 @@ _unused.view.as.xml=Ara bħala XML
 _unused.view.with.labels=Ara bit-tikketti
 _unused.view.without.labels=Ara bla tikketti
 _unused.you.have.search.for=Fittixt
-dc_format_t=Format
-dc_identifier_t=Identifikatur
-dc_publisher_t=Pubblikatur
-dc_relation_t=Relazzjoni
-dc_source_t=Sors
 languageDropDownList_t=Lingwa
 locale.albania=L-Albanija
 locale.armenia=L-Armenja
