--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -92,14 +92,14 @@ _action.alt.more.info=Klik voor meer informatie
 _action.alt.next.page=Klik hier voor volgende pagina van resultaten
 _action.alt.previous.page=Klik hier voor vorige pagina van resultaten
 _action.alt.table.view=Tabelweergave
-_action.personalpage=Mijn Europeana
+_action.personal.page=Mijn Europeana
 _action.previous=Vorige
 _action.refine.your.search=Zoekopdracht verfijnen
 _action.return.to.results=Terug naar resultaten
 _action.save.this.search=Bewaar deze zoekopdracht
 _action.save.to.mine=Bewaar in Mijn Europeana
 _action.search=Zoek
-_action.seeallrelateditems=Bekijk alle gerelateerde items
+_action.see.all.related.items=Bekijk alle gerelateerde items
 _action.send=Verstuur
 _action.share.with.friend=Deel met een vriend
 _action.videos=Videos
@@ -124,8 +124,13 @@ _metadata.dc.coverage=Herkomst
 _metadata.dc.creator=Vervaardiger
 _metadata.dc.date=Vervaardigingsdatum
 _metadata.dc.description=Beschrijving
+_metadata.dc.format=Formaat
+_metadata.dc.identifier=Identificatie
 _metadata.dc.language=Taal
+_metadata.dc.publisher=Uitgever
+_metadata.dc.relation=Verwijzing(en)
 _metadata.dc.rights=Rechten
+_metadata.dc.source=Bron
 _metadata.dc.subject=Trefwoorden
 _metadata.dc.title=Titel
 _metadata.dc.type=Soort object
@@ -200,18 +205,13 @@ _unused.view.as.xml=Bekijk als XML
 _unused.view.with.labels=Bekijk met labels
 _unused.view.without.labels=Bekijk zonder labels
 _unused.you.have.search.for=U heeft gezocht naar
+_validation.disclaimer.unchecked=Voorwaarden moeten geaccepteerd worden
 _validation.password.long=Wachtwoord te lang
 _validation.password.mismatch=Wachtwoorden ongelijk
 _validation.password.short=Wachtwoord te kort
 _validation.username.exists=Gebrukersnaam bestaat al
 _validation.username.invalid.chars=Gebruikersnaam mag alleen letters, cijfers, spaties en onderstreep bevatten
 _validation.username.long=Gebruikersnaam is te lang
-dc_format_t=Formaat
-dc_identifier_t=Identificatie
-dc_publisher_t=Uitgever
-dc_relation_t=Verwijzing(en)
-dc_source_t=Bron
-disclaimer.unchecked=Voorwaarden moeten geaccepteerd worden
 dms.administration.images=Afbeeldingen beheren
 dms.administration.pages=Paginas beheren
 dms.administration.title=Beheer
