--- a/portal/src/main/resources/i18n/messages_pl.properties
+++ b/portal/src/main/resources/i18n/messages_pl.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Kliknij by uzyskać więcej informacji
 _action.alt.next.page=Kliknij by przejść do następnej strony
 _action.alt.previous.page=Kliknij by przejść do poprzedniej strony
 _action.alt.table.view=Widok tabeli
-_action.personalpage=Moja Europeana
+_action.personal.page=Moja Europeana
 _action.previous=Poprzedni
 _action.refine.your.search=Ogranicz wyszukiwanie
 _action.return.to.results=Powrót do wyników
 _action.save.this.search=Zachowaj wyszukiwanie
 _action.save.to.mine=Zachowaj w Moja Europeana
 _action.search=Szukaj
-_action.seeallrelateditems=Zobacz wszystkie powiązane dokumenty
+_action.see.all.related.items=Zobacz wszystkie powiązane dokumenty
 _action.send=Wyślij
 _action.share.with.friend=Poinformuj znajomego
 _action.videos=Filmy wideo
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Zakres
 _metadata.dc.creator=Autor
 _metadata.dc.date=Data
 _metadata.dc.description=Opis
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identyfikator
 _metadata.dc.language=Język
+_metadata.dc.publisher=Wydawca
+_metadata.dc.relation=Relacja
 _metadata.dc.rights=Prawa
+_metadata.dc.source=Źródło
 _metadata.dc.subject=Temat
 _metadata.dc.title=Tytuł
 _metadata.dc.type=Typ
@@ -199,11 +204,6 @@ _unused.view.as.xml=Widok XML
 _unused.view.with.labels=Widok z etykietami
 _unused.view.without.labels=Widok bez etykiet
 _unused.you.have.search.for=Szukasz
-dc_format_t=Format
-dc_identifier_t=Identyfikator
-dc_publisher_t=Wydawca
-dc_relation_t=Relacja
-dc_source_t=Źródło
 languageDropDownList_t=Język
 locale.albania=Albania
 locale.armenia=Armenia
