--- a/portal/src/main/resources/i18n/messages_pt.properties
+++ b/portal/src/main/resources/i18n/messages_pt.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Clique para mais informação
 _action.alt.next.page=Cloque aqui para a página de resultados seguinte
 _action.alt.previous.page=clique aqui para a página de resultados anterior
 _action.alt.table.view=Apresentação de tabela
-_action.personalpage=Minha Europeana
+_action.personal.page=Minha Europeana
 _action.previous=Anterior
 _action.refine.your.search=Refine a sua pesquisa
 _action.return.to.results=Voltar aos resultados
 _action.save.this.search=Guardar esta pesquisa
 _action.save.to.mine=Guardar em Minha Europeana
 _action.search=Pesquisa
-_action.seeallrelateditems=Ver todos os items relacionados
+_action.see.all.related.items=Ver todos os items relacionados
 _action.send=Enviado
 _action.share.with.friend=Partilhe com um amigo
 _action.videos=Vídeos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Cobertura
 _metadata.dc.creator=Autor
 _metadata.dc.date=Data
 _metadata.dc.description=Descrição
+_metadata.dc.format=Formato
+_metadata.dc.identifier=Identificador
 _metadata.dc.language=Língua
+_metadata.dc.publisher=Editor
+_metadata.dc.relation=Relação
 _metadata.dc.rights=Direitos
+_metadata.dc.source=Fonte
 _metadata.dc.subject=Assunto
 _metadata.dc.title=Título
 _metadata.dc.type=Tipo
@@ -199,11 +204,6 @@ _unused.view.as.xml=Ver em XML
 _unused.view.with.labels=Ver com etiquetas
 _unused.view.without.labels=Ver sem etiquetas
 _unused.you.have.search.for=Pesquisou por
-dc_format_t=Formato
-dc_identifier_t=Identificador
-dc_publisher_t=Editor
-dc_relation_t=Relação
-dc_source_t=Fonte
 languageDropDownList_t=Língua
 locale.albania=Albânia
 locale.armenia=Arménia
