--- a/portal/src/main/resources/i18n/messages_ro.properties
+++ b/portal/src/main/resources/i18n/messages_ro.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Click pentru a obţine mai multă informaţie
 _action.alt.next.page=Click aici pentru următoarea pagină cu rezultate
 _action.alt.previous.page=Click aici pentru precedenta pagină cu rezultate
 _action.alt.table.view=Prezentare tabelară
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Precedentul
 _action.refine.your.search=Rafinaţi-vă interogarea
 _action.return.to.results=Retur la rezultate
 _action.save.this.search=Salvează această interogare
 _action.save.to.mine=Salvează în My Personal Page
 _action.search=Caută
-_action.seeallrelateditems=Vezi toate resursele asociate
+_action.see.all.related.items=Vezi toate resursele asociate
 _action.send=Trimite
 _action.share.with.friend=Partajează cu un prieten
 _action.videos=Clipuri video
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Relatare
 _metadata.dc.creator=Autor
 _metadata.dc.date=Data
 _metadata.dc.description=Descriere
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identificator
 _metadata.dc.language=Limbǎ
+_metadata.dc.publisher=Editor
+_metadata.dc.relation=Relaţie
 _metadata.dc.rights=Drepturi
+_metadata.dc.source=Sursǎ
 _metadata.dc.subject=Subiect
 _metadata.dc.title=Titlu
 _metadata.dc.type=Tip
@@ -199,11 +204,6 @@ _unused.view.as.xml=Prezentare în format XML
 _unused.view.with.labels=Prezentare cu etichete
 _unused.view.without.labels=Prezentare fără etichete
 _unused.you.have.search.for=Aţi căutat
-dc_format_t=Format
-dc_identifier_t=Identificator
-dc_publisher_t=Editor
-dc_relation_t=Relaţie
-dc_source_t=Sursǎ
 languageDropDownList_t=Limba
 locale.albania=Albania
 locale.armenia=Armenia
