--- a/portal/src/main/resources/i18n/messages_ru.properties
+++ b/portal/src/main/resources/i18n/messages_ru.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Previous
 _action.refine.your.search=Refine your search
 _action.return.to.results=Return to results
 _action.save.this.search=Save this search
 _action.save.to.mine=Save to My Personal Page
 _action.search=Search
-_action.seeallrelateditems=See all related items
+_action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
 _action.videos=Videos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Границы
 _metadata.dc.creator=Автор
 _metadata.dc.date=Дата
 _metadata.dc.description=Описание
+_metadata.dc.format=Формат
+_metadata.dc.identifier=Идентификатор
 _metadata.dc.language=Язык
+_metadata.dc.publisher=Издательство
+_metadata.dc.relation=Отношение
 _metadata.dc.rights=Права
+_metadata.dc.source=Источник
 _metadata.dc.subject=Тема
 _metadata.dc.title=Название
 _metadata.dc.type=Тип
@@ -199,11 +204,6 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-dc_format_t=Формат
-dc_identifier_t=Идентификатор
-dc_publisher_t=Издательство
-dc_relation_t=Отношение
-dc_source_t=Источник
 languageDropDownList_t=Язык
 locale.albania=Albania
 locale.armenia=Armenia
