--- a/portal/src/main/resources/i18n/messages_sk.properties
+++ b/portal/src/main/resources/i18n/messages_sk.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Kliknite, ak chcete viac informácií
 _action.alt.next.page=kliknite sem na zobrazenie nasledujúcej stránky s výsledkami
 _action.alt.previous.page=kliknite sem na zobrazenie predchádzajúcej stránky s výsledkami
 _action.alt.table.view=Zobrazenie v tabuľke
-_action.personalpage=Moja Europeana
+_action.personal.page=Moja Europeana
 _action.previous=Predchádzajúce
 _action.refine.your.search=Spresnite Vaše vyhľadávanie
 _action.return.to.results=Vrátiť sa k výsledkom
 _action.save.this.search=Uložiť toto vyhľadávanie
 _action.save.to.mine=Uložiť do Moja Europeana
 _action.search=Vyhľadávanie
-_action.seeallrelateditems=Pozrite si všetky súvisiace položky
+_action.see.all.related.items=Pozrite si všetky súvisiace položky
 _action.send=Poslať
 _action.share.with.friend=Pošlite známemu
 _action.videos=Videá
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Pokrytie
 _metadata.dc.creator=Autor
 _metadata.dc.date=Dátum
 _metadata.dc.description=Opis
+_metadata.dc.format=Formát
+_metadata.dc.identifier=Identifikátor
 _metadata.dc.language=Jazyk
+_metadata.dc.publisher=Vydavateľ
+_metadata.dc.relation=Vzťah
 _metadata.dc.rights=Práva
+_metadata.dc.source=Zdroj
 _metadata.dc.subject=Predmet
 _metadata.dc.title=Názov
 _metadata.dc.type=Typ
@@ -199,11 +204,6 @@ _unused.view.as.xml=Zobraziť ako XML
 _unused.view.with.labels=Zobraziť s návestiami
 _unused.view.without.labels=Zobraziť bez návestí
 _unused.you.have.search.for=Hľadali ste
-dc_format_t=Formát
-dc_identifier_t=Identifikátor
-dc_publisher_t=Vydavateľ
-dc_relation_t=Vzťah
-dc_source_t=Zdroj
 languageDropDownList_t=Jazyk
 locale.albania=Albánsko
 locale.armenia=Arménsko
