--- a/portal/src/main/resources/i18n/messages_sl.properties
+++ b/portal/src/main/resources/i18n/messages_sl.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Za več informacij kliknite tukaj
 _action.alt.next.page=Za prikaz naslednje strani z rezultati kliknite tukaj
 _action.alt.previous.page=za prikaz prejšnje strani z rezultati kliknite tukaj
 _action.alt.table.view=Poglej kot tabelo
-_action.personalpage=Moja Europeana
+_action.personal.page=Moja Europeana
 _action.previous=Nazaj
 _action.refine.your.search=Napredno iskanje
 _action.return.to.results=Nazaj na rezultate
 _action.save.this.search=Shrani iskanje
 _action.save.to.mine=Shrani v Mojo Europeano
 _action.search=Išči
-_action.seeallrelateditems=Prikaži vse sorodne vsebine
+_action.see.all.related.items=Prikaži vse sorodne vsebine
 _action.send=Pošlji
 _action.share.with.friend=Pošlji prijatelju
 _action.videos=Video
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Pokritost
 _metadata.dc.creator=Avtor
 _metadata.dc.date=Datum
 _metadata.dc.description=Opis
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identifikator
 _metadata.dc.language=Jezik
+_metadata.dc.publisher=Izdajatelj
+_metadata.dc.relation=Relacija
 _metadata.dc.rights=Pravice
+_metadata.dc.source=Vir
 _metadata.dc.subject=Vsebina
 _metadata.dc.title=Naslov
 _metadata.dc.type=Vrsta gradiva
@@ -199,11 +204,6 @@ _unused.view.as.xml=Poglej kot XML
 _unused.view.with.labels=Pogled z oznakami
 _unused.view.without.labels=Pogled brez oznak
 _unused.you.have.search.for=Iskali ste
-dc_format_t=Format
-dc_identifier_t=Identifikator
-dc_publisher_t=Izdajatelj
-dc_relation_t=Relacija
-dc_source_t=Vir
 languageDropDownList_t=Jezik
 locale.albania=Albanija
 locale.armenia=Armenija
