--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Klicka här för mer information
 _action.alt.next.page=Klicka här för nästa sida bland resultaten
 _action.alt.previous.page=Klicka här för föregående sida bland resultaten
 _action.alt.table.view=Tabellvisning
-_action.personalpage=Mitt Europeana
+_action.personal.page=Mitt Europeana
 _action.previous=Föregående
 _action.refine.your.search=Förfina din sökning
 _action.return.to.results=Återvänd till resultaten
 _action.save.this.search=Spara denna sökning
 _action.save.to.mine=Spara på Mitt Europeana
 _action.search=Sök
-_action.seeallrelateditems=Visa alla liknande objekt
+_action.see.all.related.items=Visa alla liknande objekt
 _action.send=Skicka
 _action.share.with.friend=Tipsa en vän
 _action.videos=Videor
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Täckning
 _metadata.dc.creator=Författare
 _metadata.dc.date=Datum
 _metadata.dc.description=Beskrivning
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identifikator
 _metadata.dc.language=Språk
+_metadata.dc.publisher=Utgivare
+_metadata.dc.relation=Relation
 _metadata.dc.rights=Rättigheter
+_metadata.dc.source=Källa
 _metadata.dc.subject=Ämne
 _metadata.dc.title=Titel
 _metadata.dc.type=Resurstyp
@@ -199,11 +204,6 @@ _unused.view.as.xml=Visa som XML
 _unused.view.with.labels=Visa med etiketter
 _unused.view.without.labels=Visa utan etiketter
 _unused.you.have.search.for=Du sökte efter
-dc_format_t=Format
-dc_identifier_t=Identifikator
-dc_publisher_t=Utgivare
-dc_relation_t=Relation
-dc_source_t=Källa
 languageDropDownList_t=Språk
 locale.albania=Albanien
 locale.armenia=Armenien
