--- a/portal/src/main/resources/i18n/messages_uk.properties
+++ b/portal/src/main/resources/i18n/messages_uk.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Previous
 _action.refine.your.search=Refine your search
 _action.return.to.results=Return to results
 _action.save.this.search=Save this search
 _action.save.to.mine=Save to My Personal Page
 _action.search=Search
-_action.seeallrelateditems=See all related items
+_action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
 _action.videos=Videos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Границі
 _metadata.dc.creator=Автор
 _metadata.dc.date=Дата
 _metadata.dc.description=Опис
+_metadata.dc.format=Формат
+_metadata.dc.identifier=Ідентифікатор
 _metadata.dc.language=Мова
+_metadata.dc.publisher=Видавець
+_metadata.dc.relation=Відношення
 _metadata.dc.rights=Права
+_metadata.dc.source=Джерело
 _metadata.dc.subject=Предмет
 _metadata.dc.title=Назва
 _metadata.dc.type=Тип
@@ -199,11 +204,6 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-dc_format_t=Формат
-dc_identifier_t=Ідентифікатор
-dc_publisher_t=Видавець
-dc_relation_t=Відношення
-dc_source_t=Джерело
 languageDropDownList_t=Мова
 locale.albania=Albania
 locale.armenia=Armenia
