--- a/portal/src/main/resources/i18n/messages_xx.properties
+++ b/portal/src/main/resources/i18n/messages_xx.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=XXXXXX
 _action.alt.next.page=XXXXXX
 _action.alt.previous.page=XXXXXX
 _action.alt.table.view=XXXXXX
-_action.personalpage=XXXXXX
+_action.personal.page=XXXXXX
 _action.previous=XXXXXX
 _action.refine.your.search=XXXXXX
 _action.return.to.results=XXXXXX
 _action.save.this.search=XXXXXX
 _action.save.to.mine=XXXXXX
 _action.search=XXXXXX
-_action.seeallrelateditems=XXXXXX
+_action.see.all.related.items=XXXXXX
 _action.send=XXXXXX
 _action.share.with.friend=XXXXXX
 _action.videos=XXXXXX
@@ -123,8 +123,13 @@ _metadata.dc.coverage=XXXXXX
 _metadata.dc.creator=XXXXXX
 _metadata.dc.date=XXXXXX
 _metadata.dc.description=XXXXXX
+_metadata.dc.format=XXXXXX
+_metadata.dc.identifier=XXXXXX
 _metadata.dc.language=XXXXXX
+_metadata.dc.publisher=XXXXXX
+_metadata.dc.relation=XXXXXX
 _metadata.dc.rights=XXXXXX
+_metadata.dc.source=XXXXXX
 _metadata.dc.subject=XXXXXX
 _metadata.dc.title=XXXXXX
 _metadata.dc.type=XXXXXX
@@ -199,11 +204,6 @@ _unused.view.as.xml=XXXXXX
 _unused.view.with.labels=XXXXXX
 _unused.view.without.labels=XXXXXX
 _unused.you.have.search.for=XXXXXX
-dc_format_t=XXXXXX
-dc_identifier_t=XXXXXX
-dc_publisher_t=XXXXXX
-dc_relation_t=XXXXXX
-dc_source_t=XXXXXX
 languageDropDownList_t=XXXXXX
 locale.albania=XXXXXX
 locale.armenia=XXXXXX
