--- a/portal/src/main/resources/i18n/messages_az.properties
+++ b/portal/src/main/resources/i18n/messages_az.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Previous
 _action.refine.your.search=Refine your search
 _action.return.to.results=Return to results
 _action.save.this.search=Save this search
 _action.save.to.mine=Save to My Personal Page
 _action.search=Search
-_action.seeallrelateditems=See all related items
+_action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
 _action.videos=Videos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Sərhəd
 _metadata.dc.creator=Müəllif
 _metadata.dc.date=Tarix
 _metadata.dc.description=Təsvir
+_metadata.dc.format=Format
+_metadata.dc.identifier=İdentifikator
 _metadata.dc.language=Dil
+_metadata.dc.publisher=Naşir
+_metadata.dc.relation=Əlaqə
 _metadata.dc.rights=Hüquqlar
+_metadata.dc.source=Mənbə
 _metadata.dc.subject=Mövzu
 _metadata.dc.title=Sərlövhə
 _metadata.dc.type=Növ
@@ -199,11 +204,6 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-dc_format_t=Format
-dc_identifier_t=İdentifikator
-dc_publisher_t=Naşir
-dc_relation_t=Əlaqə
-dc_source_t=Mənbə
 languageDropDownList_t=Dil
 locale.albania=Albania
 locale.armenia=Armenia
