--- a/portal/src/main/resources/i18n/messages_da.properties
+++ b/portal/src/main/resources/i18n/messages_da.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Klik for yderligere information
 _action.alt.next.page=Næste resultatliste
 _action.alt.previous.page=klik her for forrige resultatliste
 _action.alt.table.view=Tabeloversigt
-_action.personalpage=Mit Europeana
+_action.personal.page=Mit Europeana
 _action.previous=Forrige
 _action.refine.your.search=Præcisér din søgning
 _action.return.to.results=Til resultatlisten
 _action.save.this.search=Gem denne søgning
 _action.save.to.mine=Gem i Mit Europeana
 _action.search=Søg
-_action.seeallrelateditems=Se alle lignende referencer
+_action.see.all.related.items=Se alle lignende referencer
 _action.send=Send
 _action.share.with.friend=Del med en ven
 _action.videos=Videoer
@@ -123,8 +123,13 @@ _metadata.dc.coverage=Dækker
 _metadata.dc.creator=Forfatter
 _metadata.dc.date=Dato
 _metadata.dc.description=Beskrivelse
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identifikator
 _metadata.dc.language=Sprog
+_metadata.dc.publisher=Udgiver
+_metadata.dc.relation=Relationer
 _metadata.dc.rights=Ophavsret
+_metadata.dc.source=Kilde
 _metadata.dc.subject=Emne
 _metadata.dc.title=Titel
 _metadata.dc.type=Ressourcetype
@@ -199,11 +204,6 @@ _unused.view.as.xml=Vis som XML
 _unused.view.with.labels=Vis med feltnavne
 _unused.view.without.labels=Vis uden feltnavne
 _unused.you.have.search.for=Du søgte efter
-dc_format_t=Format
-dc_identifier_t=Identifikator
-dc_publisher_t=Udgiver
-dc_relation_t=Relationer
-dc_source_t=Kilde
 languageDropDownList_t=Sprog
 locale.albania=Albanien
 locale.armenia=Armenien
