--- a/portal/src/main/resources/i18n/messages_ka.properties
+++ b/portal/src/main/resources/i18n/messages_ka.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Previous
 _action.refine.your.search=Refine your search
 _action.return.to.results=Return to results
 _action.save.this.search=Save this search
 _action.save.to.mine=Save to My Personal Page
 _action.search=Search
-_action.seeallrelateditems=See all related items
+_action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
 _action.videos=Videos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=დაფარვა
 _metadata.dc.creator=ავტორი
 _metadata.dc.date=თარიღი
 _metadata.dc.description=აღწერა
+_metadata.dc.format=ფორმატი
+_metadata.dc.identifier=იდენტიფიკატორი
 _metadata.dc.language=ენა
+_metadata.dc.publisher=გამომცემელი
+_metadata.dc.relation=კავშირი
 _metadata.dc.rights=უფლებები
+_metadata.dc.source=წყარო
 _metadata.dc.subject=თემატიკა
 _metadata.dc.title=სახელწოდება
 _metadata.dc.type=ტიპი
@@ -199,11 +204,6 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-dc_format_t=ფორმატი
-dc_identifier_t=იდენტიფიკატორი
-dc_publisher_t=გამომცემელი
-dc_relation_t=კავშირი
-dc_source_t=წყარო
 languageDropDownList_t=ენა
 locale.albania=ალბანეთი
 locale.armenia=სომხეთი
