--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Klikk her for mere info
 _action.alt.next.page=Klikk her for neste resultatside
 _action.alt.previous.page=Klikk her for forrige resultatside
 _action.alt.table.view=Tabellvisning
-_action.personalpage=Mitt Norvegiana
+_action.personal.page=Mitt Norvegiana
 _action.previous=Forrige
 _action.refine.your.search=Begrens søket
 _action.return.to.results=Gå til resultater
 _action.save.this.search=Lagre dette søket
 _action.save.to.mine=Lagre i Mitt Norvegiana
 _action.search=Søk
-_action.seeallrelateditems=Se alle relaterte objekter
+_action.see.all.related.items=Se alle relaterte objekter
 _action.send=Send
 _action.share.with.friend=Del med en venn
 _action.videos=Videoer
@@ -118,13 +118,21 @@ _failure.search.saved=Lagring av søk feilet
 _header.actions=via hendelser
 _header.relatedcontent=Relatert innhold
 _language_select.italian=Italiensk
+_metadata.abm.contentprovider=Institusjon
+_metadata.abm.county=Fylke
+_metadata.abm.municipality=Kommune
 _metadata.dc.contributor=Bidragsyter
 _metadata.dc.coverage=Dekning
 _metadata.dc.creator=Forfatter
 _metadata.dc.date=Dato
 _metadata.dc.description=Beskrivelse
+_metadata.dc.format=Format
+_metadata.dc.identifier=Identifikator
 _metadata.dc.language=Språk
+_metadata.dc.publisher=Utgiver
+_metadata.dc.relation=Relasjon
 _metadata.dc.rights=Rettigheter
+_metadata.dc.source=Kilde
 _metadata.dc.subject=Emne
 _metadata.dc.title=Tittel
 _metadata.dc.type=Ressurstype
@@ -204,14 +212,6 @@ _unused.view.as.xml=Se som XML
 _unused.view.with.labels=Se med labels
 _unused.view.without.labels=Se uten labels
 _unused.you.have.search.for=Du har søkt på
-abm_contentProvider_t=Institusjon
-abm_county_t=Fylke
-abm_municipality_t=Kommune
-dc_format_t=Format
-dc_identifier_t=Identifikator
-dc_publisher_t=Utgiver
-dc_relation_t=Relasjon
-dc_source_t=Kilde
 form.sumbit=Send
 languageDropDownList_t=Språk
 locale.albania=Albania
