--- a/portal/src/main/resources/i18n/messages_tr.properties
+++ b/portal/src/main/resources/i18n/messages_tr.properties
@@ -91,14 +91,14 @@ _action.alt.more.info=Click for more information
 _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
-_action.personalpage=My Personal Page
+_action.personal.page=My Personal Page
 _action.previous=Previous
 _action.refine.your.search=Refine your search
 _action.return.to.results=Return to results
 _action.save.this.search=Save this search
 _action.save.to.mine=Save to My Personal Page
 _action.search=Search
-_action.seeallrelateditems=See all related items
+_action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
 _action.videos=Videos
@@ -123,8 +123,13 @@ _metadata.dc.coverage=kapsama
 _metadata.dc.creator=Yazar
 _metadata.dc.date=Tarih
 _metadata.dc.description=Tanım
+_metadata.dc.format=Format
+_metadata.dc.identifier=Tanımlayıcı
 _metadata.dc.language=Dil
+_metadata.dc.publisher=Yayıncı
+_metadata.dc.relation=İlişki
 _metadata.dc.rights=Haklar
+_metadata.dc.source=Kaynak
 _metadata.dc.subject=Konu
 _metadata.dc.title=Başlık
 _metadata.dc.type=Tür
@@ -199,11 +204,6 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-dc_format_t=Format
-dc_identifier_t=Tanımlayıcı
-dc_publisher_t=Yayıncı
-dc_relation_t=İlişki
-dc_source_t=Kaynak
 languageDropDownList_t=Dil
 locale.albania=Arnavutluk
 locale.armenia=Ermenistan
